# src/main/java/tech/danieljones/loansapiexample/controller/ApiExceptionHandler.java
@@ -1,0 +1,33 @@
+package tech.danieljones.loansapiexample.controller;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+import tech.danieljones.loansapiexample.loans_api_example.model.ErrorResponse;
+import tech.danieljones.loansapiexample.util.InvalidCalculationParameterException;
+
+@ControllerAdvice
+public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
+
+    @ExceptionHandler(ScheduleNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleScheduleNotFoundException(Exception e, WebRequest r) {
+        ErrorResponse error = new ErrorResponse();
+        error.setMessage(e.getMessage());
+        return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(InvalidCalculationParameterException.class)
+    public ResponseEntity<ErrorResponse> handleInvalidCalculationParameterException(Exception e, WebRequest r) {
+        ErrorResponse errorResponse = new ErrorResponse();
+        errorResponse.setMessage(e.getMessage());
+        return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+
+
+
+
+}
